<resources>
    <string name="app_name">ToDo App</string>
    <string name="name">"ToDoPrefs"</string>
    <string name="lowRu">Низкий</string>
    <string name="ordinary">Нет</string>
    <string name="urgentInArray">!! Высокий</string>
    <string name="urgent">Высокий</string>

    <string name="low">low</string>
    <string name="basic">basic</string>
    <string name="important">important</string>

    <string name="my_case">Мои дела</string>
    <string name="done">Выполнено - %1$s</string>
    <string name="importance">Важность</string>
    <string name="make_it_to">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="update">Обновить</string>
    <string name="repeat">Повторить</string>
    <string name="save">Сохранить</string>
    <string name="hintForEditMultiText">Напишите что нужно сделать</string>
    <string name="textForEmptyToast">Пожалуйста, введите описание дела</string>
    <string name="toastAddOrUpdateNew">Новые данные успешно внесены</string>
    <string name="toastDelete">Дело успешно удалено</string>
    <string name="select_importance">Выбрана важность</string>
    <string name="selected_importance">Выберите важность из выпадающего списка</string>
    <string name="toastAddDeadline">Добавлен дедлайн</string>

    <string name="lightThemePalette">Светлая тема</string>
    <string name="darkThemePalette">Темная тема</string>
    <string name="textStyle">Текстовые стили</string>

    <string name="descriptionButtonReady">Изменить готовность дела: %1$s</string>
    <string name="descriptionButtonDelete">Удалить дело</string>
    <string name="descriptionIconButtonDelete">Иконка удалить дело</string>
    <string name="descriptionButtonDeleteDisabled">Отключена</string>
    <string name="descriptionExcUpdate">При обновлении: ошибка ввода-вывода:</string>
    <string name="descriptionButtonEdit">Перейти на экран для редактирования</string>
    <string name="descriptionButtonNavToAdd">Перейти на экран добавления</string>
    <string name="descriptionButtonNavToSetting">Перейти на экран настроек</string>
    <string name="descriptionButtonNavToAboutApp">Перейти на экран о приложении</string>
    <string name="descriptionButtonCloseSettingScreen">Закрыть экран настроек</string>
    <string name="descriptionButtonCloseAddScreen">Закрыть экран добавления новой информации</string>
    <string name="descriptionButtonSwitchVisibility">Поменять видимость выполненных дел</string>
    <string name="descriptionButtonSave">Сохранить дело</string>
    <string name="descriptionButtonUpdate">Обновить список</string>
    <string name="descriptionButtonSnackbarClose">Закрыть всплывающее уведомление</string>
    <string name="descriptionButtonApply">Применить тему: %1$s</string>
    <string name="descriptionSwitcher">Добавить дедлайн</string>
    <string name="descriptionSwitcherOff">Убрать дедлайн</string>
    <string name="descriptionClickSwitcherOffToOn">Открыть календарь</string>
    <string name="descriptionClickSwitcherOnToOff">Отключить</string>

    <string name="stateDescriptionBtnReadyOn">Дело выполнено</string>
    <string name="stateDescriptionBtnReadyOff">Дело не выполнено</string>
    <string name="stateDescriptionBtnReadyImportance">Дело высокой важности невыполнено</string>

    <string name="errorSynchronized">Ошибка синхронизации! Проверьте подключение к интернету!</string>
    <string name="errorDataBaseRead">Ошибка чтения из базы данных!</string>
    <string name="errorGetData">Ошибка получения данных!</string>
    <string name="errorAddData">Ошибка добавления данных!</string>
    <string name="errorEditData">Ошибка изменения данных!</string>
    <string name="errorRemoveData">Ошибка удаления данных!</string>
    <string name="errorNoInternet">Отсутствует подключение к интернету!</string>

    <string name="updated">Данные обновляются!</string>
    <string name="returnToApp">"Возвращение к основному приложению"</string>

    <string name="setting">Настройки</string>
    <string name="selectedTheme">Выберите тему:</string>
    <string name="buttonApply">применить</string>

    <string name="lightTheme">Всегда светлая</string>
    <string name="darkTheme">Всегда темная</string>
    <string name="systemTheme">Как в системе</string>

    <string-array name="relevanceOfTodo">
        <item>@string/ordinary</item>
        <item>@string/lowRu</item>
        <item>@string/urgentInArray</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>