<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backPrimaryColor"
    android:orientation="vertical"
    tools:context=".presentation.ui.view.AddTodoItemFragment">


    <ImageButton
        android:id="@+id/ibClose"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_multi_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="@color/backSecondaryColor"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:gravity="start|top"
        android:hint="@string/hintForEditMultiText"
        android:inputType="textMultiLine"
        android:minHeight="104dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_execution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/importance"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/primaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_multi_line" />

    <Spinner
        android:id="@+id/spinner_relevance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/relevanceOfTodo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_execution" />

    <View
        android:id="@+id/separatorLine1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/et_multi_line"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/separatorColor"
        android:backgroundTint="@color/separatorColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_relevance" />


    <TextView
        android:id="@+id/tv_title_do_until"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/make_it_to"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/primaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separatorLine1" />


    <Switch
        android:id="@+id/switch_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/tv_deadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title_do_until" />

    <TextView
        android:id="@+id/tv_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_regular"
        android:text="Дата"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_do_until" />

    <View
        android:id="@+id/separatorLine2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/et_multi_line"
        android:layout_marginStart="16dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="16dp"
        android:background="@color/separatorColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_do_until" />

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:tint="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separatorLine2"
        app:srcCompat="@drawable/ic_delete" />

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/roboto_black"
        android:text="@string/delete"
        android:textAlignment="textEnd"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/iv_delete"
        app:layout_constraintTop_toBottomOf="@+id/separatorLine2" />
    <FrameLayout
        android:id="@+id/frame_layout_for_calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

